--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-NODE_ENV=test
 PORT=3000
+
+// Database settings
+DB_HOST=127.0.0.1
+DB_USERNAME=root
+DB_PASSWORD=
+DB_NAME=tdd-auth
+DB_DIALECT=mysql
