--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "morgan": "^1.10.0",
+    "mysql2": "^2.1.0",
     "sequelize": "^6.2.3"
   },
   "devDependencies": {
