--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,4 +1,4 @@
-const path = requie("path");
+const path = require("path");
 
 module.exports = {
   config: path.resolve("src", "config", "database.js"),
